[package]
name = "pfmt"
description = "A data formatting library"
version = "0.3.0"
authors = ["Michail Pevnev <mpevnev@gmail.com>"]
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/pfmt"
homepage = "https://github.com/mpevnev/pfmt"
keywords = ["formatting"]
categories = ["value-formatting"]

[dependencies]
num = "0.2.0"

[dev-dependencies]
galvanic-test = "0.1.0"
galvanic-assert = "0.8.0"
